i18n/zh-Hans/docusaurus-plugin-content-docs/version-3.0.0/ambari-dev/unit-test-reports.md
---
title: 单元测试报告
---

<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to You under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0. Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. -->

# 单元测试报告 {#unit-test-reports}

分支 | 单元测试报告 URL
-------|-------------
trunk      | https://builds.apache.org/job/Ambari-trunk-Commit/
branch-2.2 | https://builds.apache.org/job/Ambari-branch-2.2/
